# Ad-Pilot

./: .gitignore  README.md
Backend/adpilot/: pyproject.toml
Backend/adpilot/adpilot/: FBpostschedule.py  adllama_utils.py  analytics.py  auth.py  cache_utils.py  chatbot.py  db.py  email.py  image_utils.py  imaggen.py  instgram_schedule_post.py  llama_utils.py  main.py  marketinsights.py  models.py  pdf_utils.py  setting.py  settings.py  utils.py
Backend/adpilot/adpilot/models/: user.py
Backend/adpilot/adpilot/router/: content.py  user.py
Backend/adpilot/adpilot/routers/: users.py
Frontend/my-app/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
Frontend/my-app/src/: App.tsx
Frontend/my-app/src/actions/: actions.ts
Frontend/my-app/src/app/: actions.ts  layout.tsx  page.tsx
Frontend/my-app/src/app/AdCreatives/: page.tsx
Frontend/my-app/src/app/about/: page.tsx
Frontend/my-app/src/app/actions/: actions.ts
Frontend/my-app/src/app/chatbotforqueries/: page.tsx
Frontend/my-app/src/app/checkout/: page.tsx
Frontend/my-app/src/app/contact/: page.tsx
Frontend/my-app/src/app/createad/: page.tsx
Frontend/my-app/src/app/createcampaign/: page.tsx
Frontend/my-app/src/app/createimage/: page.tsx
Frontend/my-app/src/app/forgotpassword/: page.tsx
Frontend/my-app/src/app/marketinsights/: page.tsx
Frontend/my-app/src/app/resetpass/: page.tsx
Frontend/my-app/src/app/schedule-publish/: page.tsx
Frontend/my-app/src/app/signin/: page.tsx
Frontend/my-app/src/components/: SomeComponent.tsx
Frontend/my-app/src/context/: AuthContext.tsx
Frontend/my-app/src/types/: ad.ts  analytics.ts  facebook.ts
Frontend/my-app/src/utils/: apiErrors.ts
routes/: auth.js
(+34 files in other folders)
