[tool.poetry]
name = "adpilot"
version = "0.1.0"
description = ""
authors = ["saadsohail05 <saadsohail05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
