[tool.poetry]
name = "adpilot"
version = "0.1.0"
description = ""
authors = ["saadsohail05 <saadsohail05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-multipart = "^0.0.17"
passlib = "^1.7.4"
bcrypt = "3.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jwt = "^1.3.1"
pyjwt = "^2.10.0"
requests = "^2.32.3"
redis = "^5.2.0"
aiohttp = "^3.11.9"
reportlab = "^4.2.5"
cloudinary = "^1.42.2"
together = "^1.4.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
